# Learning

Api/academind/: app.js  package-lock.json  package.json
Api/academind/api/controllers/: orders.controller.js
Api/academind/api/routes/: orders.js  products.js
Cmake/basicProject/: .CMakeLists.txt.swp  CMakeLists.txt  run.sh
Cmake/basicProject/cmake/: coolModule.cmake  myModule.cmake
Cmake/basicProject/src/: CMakeLists.txt  main.cpp
Cmake/basicProject/src/math/: sum.cpp  sum.h  sumDebug.cpp
Cmake/test1/: CMakeLists.txt  tutorial.cpp  tutorialConfig.h
Cuda/: test.cu
Cuda/matrixMulti/: matrixMulti.cu
Cuda/properties/: props.cu
Cuda/vecSum/: vecSum.cu
EspIdf/controller_hci_uart/: sdkconfig
EspIdf/fast_scan/: sdkconfig  sdkconfig.old
EspIdf/getting_started/softAP/: sdkconfig  sdkconfig.old
EspIdf/http_request/main/: CMakeLists.txt  http_request_example_main.cpp
EspIdf/https_request/: sdkconfig  sdkconfig.old
Flutter/beautiful_app/: README.md  pubspec.yaml
Flutter/beautiful_app/android/app/: build.gradle
Flutter/beautiful_app/android/app/src/main/: AndroidManifest.xml
Flutter/beautiful_app/android/app/src/main/kotlin/com/brenocq/beautifulapp/: MainActivity.kt
Flutter/beautiful_app/android/app/src/profile/: AndroidManifest.xml
Flutter/beautiful_app/ios/Runner/: Info.plist
Flutter/beautiful_app/ios/Runner.xcodeproj/: project.pbxproj
Flutter/beautiful_app/lib/: main.dart
Flutter/beautiful_app/test/: widget_test.dart
Flutter/i_am_rich/: pubspec.yaml
Flutter/i_am_rich/android/app/: build.gradle
Flutter/i_am_rich/android/app/src/main/: AndroidManifest.xml
Flutter/i_am_rich/android/app/src/main/kotlin/com/brenocq/iamrich/: MainActivity.kt
Flutter/i_am_rich/android/app/src/profile/: AndroidManifest.xml
Flutter/i_am_rich/ios/Runner.xcodeproj/: project.pbxproj
Flutter/i_am_rich/lib/: main.dart
OpenGL/: README.md
OpenGL/UdemyCourse/: Makefile  main.cpp  model.cpp  model.h  run  shader.cpp
OpenGL/learnopengl.com/: .Makefile.swp  .stb_image.cpp.swp  6.2.cubemaps.fs  Makefile  a  glad.c  glad.h  main.cpp  run  shader.cpp  shader_s.h
OpenGL/learnopengl.com/learnopengl/: camera.h  mesh.h  model.h  shader.cpp  shader.h  shader_s.h
Qt/Qt+OpenCV/QtCvTest/: QtCvTest.pro  main.cpp
Qt/Qt+OpenCV/build-QtCvTest-Desktop_Qt_5_12_6_GCC_64bit-Debug/: Makefile  QtCvTest
Vulkan/: Makefile
Vulkan/udemyBenCook/: Makefile  VulkanRenderer.cpp  VulkanRenderer.h
